<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:fillViewport="true"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_login"
            android:textColor="@color/yellow_main"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/clFildsInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clFildsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/textHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/forgetPassword">

            <EditText
                android:id="@+id/textLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fields_input"
                android:hint="@string/text_login"
                android:textColorHint="@color/yellow_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/fields_input"
                android:hint="@string/text_password"
                android:textColorHint="@color/yellow_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLogin" />

            <ImageView
                android:id="@+id/ivVisiblePassword"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:onClick="getVisiblePassword"
                android:src="@drawable/icon_not_visible"
                app:layout_constraintBottom_toBottomOf="@+id/textPassword"
                app:layout_constraintEnd_toEndOf="@+id/textPassword"
                app:layout_constraintTop_toTopOf="@+id/textPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/recover_password"
            android:textColor="@color/yellow_main"
            android:textSize="14dp"
            android:onClick="nextRecoverPassword"
            app:layout_constraintEnd_toEndOf="@+id/clFildsInput"
            app:layout_constraintTop_toBottomOf="@+id/clFildsInput" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/button_login"
            android:onClick="login"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color"
            android:textSize="17dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword"
            app:layout_constraintBottom_toTopOf="@+id/pbLoading"/>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintBottom_toTopOf="@id/tvNextRegistraation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvNextRegistraation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nextRegistraation"
            android:text="@string/not_personal_account"
            android:textColor="@color/yellow_main"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>