<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:fillViewport="true"
    tools:context=".AllPlacesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svSearchName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivOpenSearch"
            />

        <ImageView
            android:id="@+id/ivOpenSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/open_search"
            app:layout_constraintStart_toEndOf="@+id/svSearchName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/svSearchName"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvTypeLocality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_type_location"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Spinner
                android:id="@+id/spTypeLocality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:background="@drawable/spinner"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvTypeLocality"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_country"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@+id/spTypeLocality"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Spinner
                android:id="@+id/spCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:background="@drawable/spinner"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvCountry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tvSorting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sorting"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@+id/spCountry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:layout_constraintTop_toBottomOf="@+id/tvSorting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Spinner
                    android:id="@+id/spField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@drawable/spinner"
                    android:padding="10dp"
                    android:entries="@array/fieldsNameSearch"/>

                <Spinner
                    android:id="@+id/spSort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@drawable/spinner"
                    android:padding="10dp"
                    android:entries="@array/order" />

            </TableRow>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ListView
            android:id="@+id/lvData"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/pbLoading"
            app:layout_constraintTop_toBottomOf="@+id/settings"/>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tvHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:layout_margin="5dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>